--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
 			<version>2.0.0</version>
 			<scope>test</scope>
 		</dependency>
+
+        <dependency>
+           <groupId>io.sentry</groupId>
+           <artifactId>sentry-spring</artifactId>
+           <version>1.7.27</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
