--- a/pom.xml
+++ b/pom.xml
@@ -102,13 +102,18 @@
 			<version>2.0.0</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-api-mockito2</artifactId>
 			<version>2.0.0</version>
 			<scope>test</scope>
 		</dependency>
+  
+        <dependency>
+             <groupId>org.apache.tika</groupId>
+             <artifactId>tika-core</artifactId>
+             <version>1.22</version>
+        </dependency>		
 	</dependencies>
 
 	<build>
