--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,16 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<keycloak.version>4.5.0.Final</keycloak.version>
 		<swagger-annotations-version>1.5.8</swagger-annotations-version>
 		<springfox-version>2.8.0</springfox-version>
 	</properties>
 
 	<dependencies>
+ 		<dependency>
+		     <groupId>za.co.grindrodbank</groupId>
+		    <artifactId>security</artifactId>
+		    <version>0.0.5</version>
+		</dependency>	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -53,7 +57,7 @@
 		<dependency>
 			<groupId>org.springframework.security.oauth.boot</groupId>
 			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
-			<version>2.2.0.RELEASE</version>
+			<version>2.0.0.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
