--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,6 +96,7 @@ workflows:
   version: 2
   build-commit:
     jobs:
+      - generate-axios-client
       - test
       - sonarqube
       - fossa-scan
