--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - checkout
       - run: mkdir ~/repo/dokuti-typescript-axios
+      - run: sed 's/^openapi.*/&-extra/' ~/repo/doc/dokuti_api.yml >> ~/repo/dokuti_api.yml && grep openapi ~/repo/dokuti_api.yml
       - run: /usr/local/bin/docker-entrypoint.sh generate -i ~/repo/doc/dokuti_api.yml -g typescript-axios -o ~/repo/dokuti-typescript-axios --model-package=model --api-package=api --additional-properties=withSeparateModelsAndApi=true,modelPropertyNaming=camelCase,npmName=@grindrodbank/${CIRCLE_PROJECT_REPONAME}-api
       - persist_to_workspace:
           root: ~/repo
