--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,7 +171,7 @@ workflows:
               only: master
       - docker-build:
           requires:
-            - test
+            - unit-test
             - sonarqube
             - fossa-scan
           filters:
