--- a/doc/dokuti_api.yml
+++ b/doc/dokuti_api.yml
@@ -95,6 +95,20 @@ paths:
             - expiry-date
             - renewal-date
             - contract-date
+        - name: filterSharedWithOthers
+          in: query 
+          required: false
+          description: Shared with others filter
+          schema:
+            type: boolean
+            default: false    
+        - name: filterSharedWithMe
+          in: query 
+          required: false
+          description: Shared with me filter
+          schema:
+            type: boolean
+            default: false              
         - name: orderBy
           in: query
           required: false
@@ -1821,9 +1835,3 @@ components:
       type: array
       items:
          $ref: '#/components/schemas/SharedObject'
-
-
-
-      
-        
-        
